Fix the missing comma and whitespace separators between names in awards

--- a/scripts/src/components/styles/main.css
+++ b/scripts/src/components/styles/main.css
@@ -847,7 +847,7 @@ a {
   }
 
   .awardee {
-    &:after {
+    &::after {
       content: ', ';
     }
 
